Troubleshooting Layout Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,7 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
+  /* TODO: ISSUE color */
   /* color: var(--color-headings); */
 }
 
@@ -177,6 +178,7 @@ a {
 .list--tick {
   list-style-image: url(../images/tick.svg);
   padding-left: 3rem;
+  /* TODO: ISSUE color */
   color: var(--color-headings);
 }
 
@@ -245,7 +247,9 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  /* padding: 2rem 3rem; */
+  /* TODO: padding */
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -822,6 +826,8 @@ a {
   justify-items: center;
   max-width: 700px;
   margin: 0 auto;
+  /* TODO: ISSUE color */
+  color: var(--color-headings);
 }
 
 @media screen and (min-width: 768px) {
@@ -968,6 +974,12 @@ a {
   .footer__heading {
     font-size: 1.6rem;
   }
+}
+
+/* Sign-up Callout ************************************************************/
+
+.callout-signup {
+  transform: translateY(5rem);
 }
 
 /* TEST ***********************************************************************/
